# mcp-agent

./: .env.template  .gitignore  README.md  main.py  mcp_servers.json  pyproject.toml
prompt/: system_prompt.txt
src/mcp_server/: server_registry.py  types.py
src/mcp_server/utils/: path.py
src/utils/: messages.py
